[package]
name = "usched"
version = "0.1.0"
edition = "2021"
description = "Unified scheduler CLI wrapping systemd-run and at"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
cron = "0.12"
anyhow = "1"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
